[tool.poetry]
name = "site-server"
version = "0.1.0"
description = ""
authors = ["treee <2332532718@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0"
Flask-SQLAlchemy = "^2.4.4"
gunicorn = "^20.0.4"
Flask-Migrate = "^2.5.3"
redis = "^3.5.3"
pymysql = "^1.0.2"
celery = "4.4.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.0"
yapf = "^0.30.0"
pytest = "^6.2.1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
